objects/signaturit__SIG_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>signaturit__DeliveryType__c</fullName>
        <label>Delivery Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Expiration__c</fullName>
        <description>If the request expires</description>
        <inlineHelpText>If the request expires</inlineHelpText>
        <label>Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Expiration_date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If expiration is set, the number of days to expiration</description>
        <inlineHelpText>If expiration is set, the number of days to expiration</inlineHelpText>
        <label>Days to Expiration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__Reminder__c</fullName>
        <description>Default reminder to set (picklist)</description>
        <inlineHelpText>Default reminder to set (picklist)</inlineHelpText>
        <label>Reminder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Reminder_days__c</fullName>
        <description>Days of the week to send the reminder</description>
        <inlineHelpText>Días de la semana para enviar el recordatorio.</inlineHelpText>
        <label>Reminder Days</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Rich_Body__c</fullName>
        <label>Rich Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__SIG_SaveDocumentsInSalesforce__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Store documents in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SaveAuditTrailInSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Audit Trail In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SaveSignedInSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save signed documents in Salesforce</description>
        <inlineHelpText>Save signed documents in Salesforce</inlineHelpText>
        <label>Save Signed In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__SignType__c</fullName>
        <description>Default sign type (picklist)</description>
        <inlineHelpText>Default sign type (picklist)</inlineHelpText>
        <label>Sign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignatureType__c</fullName>
        <description>Signature type to use in the process</description>
        <inlineHelpText>Signature type to use in the process</inlineHelpText>
        <label>SignatureType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__UseSMSOTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If SMS OTP should be used</description>
        <inlineHelpText>If SMS OTP should be used</inlineHelpText>
        <label>Use SMS OTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__Use_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signaturit__Use_User_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if use the user token for the Signaturit connection. true --&gt; Use User token, False--&gt; Use Global Token</description>
        <inlineHelpText>Indicate if use the user token for the Signaturit connection. true --&gt; Use User token, False--&gt; Use Global Token</inlineHelpText>
        <label>Use User Token</label>
        <type>Checkbox</type>
    </fields>
    <label>Signaturit Settings</label>
    <pluralLabel>Signaturit Settings</pluralLabel>
</CustomObject>